# cmx-capstone-ml

./: .gitignore  README.md  ku_csv  main.py  manage.py  pyproject.toml
src/cmx_capstone_ml_morriswa/: __init__.py
src/cmx_capstone_ml_morriswa/predict/: __init__.py
src/cmx_capstone_ml_morriswa/scrape/: __init__.py  demo_scrape.py  site_map.py  web.py
src/scrape/: __init__.py  site_map.py  web.py
