[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmx-capstone-ml_MORRISWA"
version = "0.0.0.dev0"
authors = [
  { name="William Morris", email="william@morriswa.org" },
]
description = "CMX Capstone Machine Learning"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPL 3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4==4.13.3",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "torch==2.6.0",
    "requests==2.32.3"
]

[project.urls]
Homepage = "https://github.com/morriswa/cmx-capstone-ml"
